--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
 								<article>
 									<header>
 
-										<h2><a href= "https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html">Stock Analysis With Python and Yahoo Finance API<br /></a></h2>
+										<h2><a href= "https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html">Sales Forecasting using time-series Analysis<br /></a></h2>
 									</header>
 									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html" class="image fit"><img src="images/stockm.jpg" alt="" /></a>
-									<p>Finance world is increasingly using data science to get insights into 
-										stock market data. Here we will analyse Tesla and other auto companies stock.</p>
+									<p> The grocery store chain has problem with fresh produce going to waste as it is perishable. We are tasked with forescasting fresh produce sales so we only send appropriate amount of fresh produce to the particular stores. </p>
 									<ul class="actions special">
 										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html" class="button">Full Code</a></li>
 									</ul>
@@ -79,24 +78,22 @@
 								<article>
 									<header>
 
-										<h2><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1">KPI Dashbaord With Tableau<br /></a></h2>
+										<h2><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1">Predicting Banglore Real Estate Prices Using Regression<br /></a></h2>
 									</header>
 									<a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="image fit"><img src="images/kpidash.png" alt="" /></a>
-									<p>Interactive Tableau Dashboard to analyse the spending of different generations
-										in different sector. </p>
+									<p> Using regression analysis to predict prices of house in Banglore to help the company make better investment decisions. </p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="button">Try out the dashboard out!</a></li>
+										<li><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="button">Full Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html">Exploratory Data Analysis And Visualisation With Pandas</a></h2>
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html">Movie Recommendation Engine </a></h2>
 									</header>
 									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="image fit"><img src="images/eda1.jpg" alt="" /></a>
-									<p>Cleaning Data and performing Exploratory Data Analysis on the famous
-										Titanic dataset.</p>
+									<p>Creating Movie Recommednation Engine to recommend movies to the app user.</p>
 									<ul class="actions special">
-										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="button">Full Story</a></li>
+										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="button">Full Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -130,13 +127,11 @@
 								<article>
 									<header>
 									
-										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html">Data Wrangling And Cleaning With Python pandas<br />
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html">Predicting Price Of A Flight Using Machine Learning<br />
 										</a></h2>
 									</header>
 									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="image fit"><img src="images/cleaningdata.jpg" alt="" /></a>
-									<p>Real world data is messy. Majority of our time as data analyst 
-										is used to clean and wrangle data. In this project we will use methods to
-										clean data that are used in industry.</p>
+									<p>Predicting flight prices by cleaning,preparing the given data and using machine learning.</p>
 									<ul class="actions special">
 										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="button">Full Story</a></li>
 									</ul>
