--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>My Porfolio<br /></h1>
 						<p>As a showcase of my abilities here are the several projects I've done
-							 with Python (pandas,numpy,seaborn,matplotlib),Tableau,SQL etc.<br /></p>
+							 with Python (pandas,numpy,seaborn,matplotlib,Sklearn),Tableau,SQL etc.<br /></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -52,8 +52,7 @@
 								<header class="major">
 									
 									<h2><a href="#">My name is Aniket More</a></h2>
-									<p>I am a passionate developer/analyst but more importantly I'm passinate about technology
-										and data science.
+									<p>Business analytics for a grocery chain with machine learning:
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/wall1.jpg" alt="" /></a>
