Edited first project headline

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									
 									<h2><a href="#">My name is Aniket More</a></h2>
-									<p>Business analytics for a grocery chain with machine learning:
+									<p>Business Analytics for a grocery chain with Machine Learning (click below):
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/wall1.jpg" alt="" /></a>
