changed image extension

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 										<h2><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1">Predicting Banglore Real Estate Prices Using Regression<br /></a></h2>
 									</header>
-									<a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="image fit"><img src="images/bangprice.png" alt="" /></a>
+									<a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="image fit"><img src="images/bangprice.jpg" alt="" /></a>
 									<p> Using regression analysis to predict prices of house in Banglore to help the company make better investment decisions. </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="button">Full Code</a></li>
