--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<header>
 										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html">Movie Recommendation Engine </a></h2>
 									</header>
-									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="image fit"><img src="images/eda1.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="image fit"><img src="images/movierec.jpg" alt="" /></a>
 									<p>Creating Movie Recommednation Engine to recommend movies to the app user.</p>
 									<ul class="actions special">
 										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="button">Full Code</a></li>
@@ -129,7 +129,7 @@
 										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html">Predicting Price Of A Flight Using Machine Learning<br />
 										</a></h2>
 									</header>
-									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="image fit"><img src="images/cleaningdata.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="image fit"><img src="images/flightprice.jpg" alt="" /></a>
 									<p>Predicting flight prices by cleaning,preparing the given data and using machine learning.</p>
 									<ul class="actions special">
 										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="button">Full Story</a></li>
