--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/wall1.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/CustSegmentation_16097606304410/SegmentationDashboard" class="button large">Click Here To Go See Full Code! </a></li>
+									<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BizAns.html" class="button large">Click Here To Go See Full Code! </a></li>
 								</ul>
 							</article>
 
@@ -66,33 +66,33 @@
 								<article>
 									<header>
 
-										<h2><a href= "https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html">Sales Forecasting using time-series Analysis<br /></a></h2>
+										<h2><a href= "https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/SalesForecasting.html">Sales Forecasting using time-series Analysis<br /></a></h2>
 									</header>
-									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html" class="image fit"><img src="images/stockm.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/SalesForecasting.html" class="image fit"><img src="images/stockm.jpg" alt="" /></a>
 									<p> The grocery store chain has problem with fresh produce going to waste as it is perishable. We are tasked with forescasting fresh produce sales so we only send appropriate amount of fresh produce to the particular stores. </p>
 									<ul class="actions special">
-										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/StockAnalysis/StockAnalysis.html" class="button">Full Code</a></li>
+										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/SalesForecasting.html" class="button">Full Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 
-										<h2><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1">Predicting Banglore Real Estate Prices Using Regression<br /></a></h2>
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BangloreHousingPricePred.html">Predicting Banglore Real Estate Prices Using Regression<br /></a></h2>
 									</header>
-									<a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="image fit"> <img src="images/bangprice.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BangloreHousingPricePred.html" class="image fit"> <img src="images/bangprice.jpg" alt="" /></a>
 									<p> Using regression analysis to predict prices of house in Banglore to help the company make better investment decisions. </p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/profile/aniket.more5006#!/vizhome/GenSpending/Dashboard1" class="button">Full Code</a></li>
+										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BangloreHousingPricePred.html" class="button">Full Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html">Movie Recommendation Engine </a></h2>
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/PortRecc.html">Movie Recommendation Engine </a></h2>
 									</header>
-									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="image fit"><img src="images/movierec.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/PortRecc.html" class="image fit"><img src="images/movierec.jpg" alt="" /></a>
 									<p>Creating Movie Recommednation Engine to recommend movies to the app user.</p>
 									<ul class="actions special">
-										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/EDAOnTitanic.html" class="button">Full Code</a></li>
+										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/PortRecc.html" class="button">Full Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -112,7 +112,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/sqlTab.html">SQL+Tableau together for Data Analysis and Visualisation<br />
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/sqlTab.html">SQL+Tableau together for Data Analysis and Visualization<br />
 										</a></h2>
 									</header>
 									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/sqlTab.html" class="image fit"><img src="images/sqltab.jpg" alt="" /></a>
@@ -126,13 +126,13 @@
 								<article>
 									<header>
 									
-										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html">Predicting Price Of A Flight Using Machine Learning<br />
+										<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/FlightPricePred.html">Predicting Price Of A Flight Using Machine Learning<br />
 										</a></h2>
 									</header>
-									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="image fit"><img src="images/flightprice.jpg" alt="" /></a>
+									<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/FlightPricePred.html" class="image fit"><img src="images/flightprice.jpg" alt="" /></a>
 									<p>Predicting flight prices by cleaning,preparing the given data and using machine learning.</p>
 									<ul class="actions special">
-										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/tidy.html" class="button">Full Story</a></li>
+										<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/FlightPricePred.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
