--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Aniket's Portfolio</a></li>
+							<li class="active"><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BizAns.html">Aniket's Portfolio</a></li>
 						</ul>
 						<ul class="icons">
 							
@@ -51,7 +51,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">My name is Aniket More.Here are some of the projects I have done.</a></h2>
+									<h2><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BizAns.html">My name is Aniket More.Here are some of the projects I have done.</a></h2>
 									<p>Business Analytics for a grocery chain with Machine Learning (click below):
 									</p>
 								</header>
