--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 						<p>As a showcase of my abilities here are the several projects I've done
 							 with Python (pandas,numpy,seaborn,matplotlib,Sklearn),Tableau,SQL etc.<br /></p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BizAns.html" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Data Nerd</a>
+						<a href="https://m5kxhlrwvvcoefplhv4liq-on.drv.tw/DataAnalysis/BizAns.html" class="logo">Data Nerd</a>
 					</header>
 
 				<!-- Nav -->
